# newsclocker-backend-apis

./: .gitignore  Dockerfile  Dockerfile.aws.lambda  README.md  boot.sh  main.py  pyproject.toml  requirements.txt
app/: auth.py  chat.py  dependencies.py  models.py  utils.py
app/data/: news_search.json
app/routers/v1/: __init__.py  deliver_to_the_mail.py  endpoints.py  markdown_to_pdf.py  scrape.py  search_news.py  task.py
notebooks/: get-ai-insight.ipynb  gogoduck-search.ipynb  load-prompt.ipynb  time_zone_to_utc.ipynb  update-prompt-icon.ipynb
prompts/: prompt_1.json  prompt_2.json  prompt_investment.json
terraform/: ecr.tf  main.tf  variables.tf
