[project]
name = "newsclocker-backend-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.4",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.90",
    "cuid>=0.4",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "markdown-pdf>=1.3.2",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "pymongo>=4.10.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.8.4",
]
